Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Nov-2010 Christophe Demko
 $ Storing the default style name without ** when language debug is on while installing template

05-Nov-2010 Jean-Marie Simonet
 # [#21798] Saving Profile Plugin configuration disables Profile, Thanks Mathavan and Elin.
 #$ Enabling dashes in template ini keys for positions. Adding these strings for admin templates. + some.
 
04-Nov-2010 Christophe Demko
 # [#23096] Clarification & Simplification of ACL UI (Andrew Eddie, Andrew Tarr)

04-Nov-2010 Jean-Marie Simonet
 # [#23113] Clean up extraneous plus sign in user group edit screen. Thanks Andrea.
 # [#22860] Invalid icon paths in com_media/models/list.php. Thanks Christophe.

03-Nov-2010 Andrew Eddie
 ! Updated Beta 13 SQL upgrade diff.

02-Nov-2010 Christophe Demko
 # [#23092] Save and New menu item displays error
 # [#22562] Uninstalling core templates triggers multiple errors
 # [#21512] mod_login does not redirect to menu item with access level greater than current
 # [#23082] Help system does not work correctly when debug language is ON
 # [#23095] Missing author_email in components/com_content/views/featured
 # [#23029] JHtml::stylesheet not backward compatible and broken (Andrew, Mark)
 # [#22188] Optimize beez font loading for IE (Rouven Weßling)

02-Nov-2010 Jean-Marie Simonet
 # [#23071] Provide template_preview.png for both Beez templates. Thanks Michael and Ramindu.
 # [#23090] Acl - edit own - message "edit not permitted" in categories. Thanks Christophe.
 # [#23094] Double translation in JHtmlJGrid. Thanks Christophe.
 # [#23097] Contact edit screen is not consistent with the other compnents. Thanks Elin and Christophe.
 # [#23106] Globally define commonly used module position names. Thanks Matt.

01-Nov-2010 Jean-Marie Simonet