@@ -132,7 +132,7 @@
 			description="JGLOBAL_FIELD_PUBLISH_UP_DESC"
 			class="inputbox"
 			format="%Y-%m-%d %H:%M:%S"
-			size="20"
+			size="22"
 			filter="user_utc" />
 
 		<field
@@ -143,7 +143,7 @@
 			description="JGLOBAL_FIELD_PUBLISH_DOWN_DESC"
 			class="inputbox"
 			format="%Y-%m-%d %H:%M:%S"
-			size="20"
+			size="22"
 			filter="user_utc" />
 
 		<field
